--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+.bg-body-tertiary {
+  background-color: #fff2e6;
+
+}
+
+.main-bg {
+  height : 300px;
+  background-image : url('./img/bgCC.png');
+  background-size : cover;
+  background-position : center;
+}
+
+
+
 .App {
   text-align: center;
 }
@@ -14,7 +28,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #fff2e6;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
