--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,18 @@
 }
 
 .main-bg {
-  height : 300px;
-  background-image : url('./img/bgCC.png');
+  height : 500px;
+  background-image : url('./img/막이올려짐.webp');
   background-size : cover;
   background-position : center;
 }
 
+.sort-bg {
+  height : 400px;
+  background-image : url('./img/막이내려짐.webp');
+  background-size : cover;
+  background-position : center;
+}
 
 
 .App {
